--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gulp-connect": "^2.2.0"
   },
   "scripts": {
+    "serve": "gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Koen Vendrik",
