--- a/package.json
+++ b/package.json
@@ -3,16 +3,38 @@
   "version": "0.1.0",
   "description": "threejs experiment",
   "main": "gulpfile.js",
-  "dependencies": {},
   "devDependencies": {
-    "gulp": "^3.9.0",
-    "gulp-browserify": "^0.5.1",
-    "gulp-connect": "^2.2.0"
+    "babel-cli": "^6.11.4",
+    "babel-polyfill": "^6.8.0",
+    "babel-preset-es2015": "^6.13.2",
+    "babelify": "^7.3.0",
+    "browserify": "^13.1.0",
+    "es6-promise": "^3.1.2",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-connect": "^4.2.0",
+    "gulp-ejs": "^2.1.3",
+    "gulp-ejs-locals": "0.0.1",
+    "gulp-htmlmin": "^3.0.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.3.2",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.4",
+    "gutil": "^1.6.4",
+    "isomorphic-fetch": "^2.2.1",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   },
   "scripts": {
     "serve": "gulp",
+    "build": "gulp build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Koen Vendrik",
-  "license": "BSD 2-Clause"
+  "license": "BSD 2-Clause",
+  "dependencies": {
+    "stats-js": "^1.0.0-alpha1",
+    "three": "^0.89.0",
+    "three-pointerlock": "^0.0.2"
+  }
 }
